Add: Naber: Warum Audio-Deskription wertvollen SEO-Content birgt

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -837,6 +837,10 @@
         <i class="journal">Disability Studies Quarterly</i>, <abbr>Vol</abbr> 35, <abbr>No</abbr> 2 (2015).
         <br />This article is about audio description as an exercise that develops students' writing and critical thinking skills.
       </li>
+      <li><span lang="de">Naber, Helmut:
+        <a href="https://audiotyped.de/seo/audio-transkription-seo-content/">Warum Audio-Transkription wertvollen <abbr>SEO</abbr>-Content birgt</a>,
+        <i class="website">AudioTyped</i>,</span> 16.07.2020.
+      </li>
     </ul>
 
     <p>YouDescribe:</p>
