Add: zappmedia: Transkription – Verfahren und Produktionsablauf

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -841,6 +841,15 @@
         <a href="https://audiotyped.de/seo/audio-transkription-seo-content/">Warum Audio-Transkription wertvollen <abbr>SEO</abbr>-Content birgt</a>,
         <i class="website">AudioTyped</i>,</span> 16.07.2020.
       </li>
+      <li><span lang="de">
+        <a href="https://voiceover.zappmedia.de/transkription-verschriftlichung-produktion.html" hreflang="de">Transkription – Verfahren und Produktionsablauf</a>,
+        <i class="website">zappmedia</i></span> (no date; accessed on 03.05.2021).
+        <br />This article points out that the use of voice recognition has so far not been helpful
+        <q lang="de">Versuche, die aufwendige Transkriptionsarbeit durch den Einsatz von automatischer Spracherkennungssoftware zu erleichtern, haben bislang keine zufriedenstellenden Ergebnisse gebracht.
+        Wenn diese auch bei langsam und bewusst gesprochenen Diktaten herangezogen werden kann, versagt sie in aller Regel bei dialogischen Szenen. Darüber hinaus bietet sie natürlich auch keinerlei Möglichkeit,
+        für Hörbehinderte wichtige Informationen wie eine dramaturgisch bedeutsame Umgebungsbeschreibung, einen bestimmten Gesichtsausdruck oder die Schilderung wichtiger Geräusche herauszufiltern und schriftlich zu fixieren.
+        Die Gewährleistung der Barrierefreiheit in der Transkription ist also nach wie vor nur durch manuelles Transkribieren von geschulten Fachleuten zu erreichen.</q>
+      </li>
     </ul>
 
     <p>YouDescribe:</p>
