Fix validation errors

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -158,7 +158,7 @@
       </li>
       <li>
         <a href="https://webaim.org/resources/shortcuts/nvda">Keyboard Shortcuts for <abbr>NVDA</abbr></a>,
-        <i class="website">Web<abbr>AIM</abbr</i>, 25.09.2020.
+        <i class="website">Web<abbr>AIM</abbr></i>, 25.09.2020.
       </li>
       <li><span lang="de"><a href="https://www.ionos.de/digitalguide/websites/web-entwicklung/screenreader/" hreflang="de">Alles über Screenreader: Blind am Computer arbeiten</a>,
         <i class="website">IONOS</i></span>, 13.04.2018.
@@ -178,7 +178,7 @@
       </li>
       <li>
         <a href="https://www.zoomtext.com/products/zoomtext-fusion/">ZoomText Fusion</a>,
-        <i class="website">ZoomText</a> (no date). Fusion combines <abbr>JAWS</abbr> and ZoomText.
+        <i class="website">ZoomText</i> (no date). Fusion combines <abbr>JAWS</abbr> and ZoomText.
       </li>
       <li>
         <a href="http://gwmicro.com/"><abbr>GW</abbr> Micro</a>
@@ -226,8 +226,8 @@
 
     <h2>Mobile Apps</h2>
     <ul>
-      <li><a href="https://www.youtube.com/watch?v=DybczED-GKE">Seeing <abbr>AI</abbr></a>
-      (<i class="ytchannel">@@</i> on YouTube, @@ minutes, ).
+      <li><a href="https://www.youtube.com/watch?v=DybczED-GKE">Seeing <abbr>AI</abbr>: Making the visual world more accessible</a>
+        (<i class="ytchannel">Microsoft</i> on YouTube, 3 minutes, 03.12.2019).
       </li>
       <!--https://www.youtube.com/watch?v=DybczED-GKE&ab_channel=Microsoft-->
     </ul>
