Add: comparison of three screen readers

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -201,6 +201,10 @@
         <a href="https://bocoup.com/blog/using-nvda-screen-reader-on-windows">Using <abbr>NVDA</abbr> Screen Reader on Windows</a>,
         <i class="website">Bocoup</i>, 21.03.2017.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=9_K5-4ngDtE">A Comparison of Three Screen Readers: <abbr>JAWS</abbr>, <abbr>NVDA</abbr>, and Voiceover</a>
+        (<i class="ytchannel">Challenge Solutions</i> on YouTube, 16 minutes, 21.09.2020).
+      </li>
       <!--
         * Oracle: Orca Screen Reader and Magnifier [Oracle Solaris 11 Accessibility Guide for the GNOME Desktop]: https://docs.oracle.com/cd/E23824_01/html/E24675/ats-2.html
       -->
@@ -286,6 +290,32 @@
         <a href="https://www.routledge.com/The-Role-of-Assistive-Technology-in-Fostering-Inclusive-Education-Strategies/Hoogerwerf-Mavrou-Traina/p/book/9781138370081"><abbr>ISBN</abbr> 9781138370081</a>.
       </li>
     </ul>
+    <!--
+    <section>
+      <h2></h2>
+      <ul>
+        <li>
+          <a href=""></a>,
+          <i class=""></i>,
+        </li>
+        <li>
+          <a href=""></a>
+          (<i class="ytchannel"></i> on YouTube, minutes, ).
+        </li>
+        <li>
+          <a href=""></a>:
+          <q cite=""></q>
+          <br />:
+          <a href=""></a>
+          <i class=""></i>,
+        </li>
+        <li>
+          <i class="booktitle"></i>.
+          <a href=""><abbr>ISBN</abbr> </a>.
+        </li>
+      </ul>
+    </section>
+    -->
   </main>
 
   <footer>
