Add: de Oliveira: Online-Kurs: Screenreader NVDA

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -201,6 +201,10 @@
         <a href="https://bocoup.com/blog/using-nvda-screen-reader-on-windows">Using <abbr>NVDA</abbr> Screen Reader on Windows</a>,
         <i class="website">Bocoup</i>, 21.03.2017.
       </li>
+      <li>de Oliveira, Domingos:
+        <span lang="de"><a href="https://www.youtube.com/watch?v=Cu4dR43ebDk">Online-Kurs: Screenreader <abbr>NVDA</abbr> für Entwickler und Sehende</a>
+        (<i class="ytchannel">www.netz-barrierefrei.de</i></span> on YouTube, 85 minutes, 21.11.2020).
+      </li>
       <li>
         <a href="https://www.youtube.com/watch?v=9_K5-4ngDtE">A Comparison of Three Screen Readers: <abbr>JAWS</abbr>, <abbr>NVDA</abbr>, and Voiceover</a>
         (<i class="ytchannel">Challenge Solutions</i> on YouTube, 16 minutes, 21.09.2020).
