Add: NDR: Vorgaben für Audiodeskriptionen

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -807,6 +807,10 @@
         <a href="https://www.loc.gov/nls/about/services/reference-publications/guides/audio-description-resource-guide/">Audio Description Resource Guide</a>,
         <i class="website">National Library Service for the Blind and Print Disabled (Library of Congress)</i>, 2018.
       </li>
+      <li><span lang="de">
+        <a href="https://www.ndr.de/fernsehen/barrierefreie_angebote/audiodeskription/Vorgaben-fuer-Audiodeskriptionen,audiodeskription140.html" hreflang="de">Vorgaben für Audiodeskriptionen</a>,
+        <i class="website">Norddeutscher Rundfunk</i>,</span> 25.06.2019.
+      </li>
       <li>
         <a href="https://www.youtube.com/watch?v=gZojp0mG7Y0" lang="de">Was ist Audiodeskription? (audiodekriptive Version für Sehbehinderte)</a>
         (<i class="ytchannel">SwissFootballLeague</i> on YouTube, 3 minutes, 19.10.2017).
