Add more sites with acessibility issues

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -991,11 +991,16 @@
         </li>
         <li>
           <a href="https://websemantics.uk/tools/font-size-conversion-pixel-point-em-rem-percent/">Font size conversion px-pt-em-rem-percent</a>
-          (snowflakes, on 10.12.2020; not when accessed on 24.01.2021).
-          <i class=""></i>,
+          <i class="website">webSemantics</i> (snowflakes, on 10.12.2020; not when accessed on 24.01.2021).
         </li>
       </ul>
-      <p>Animated <abbr title="Graphics Interchange Format">GIF</abbr>:</p>
+      <p>Animated <abbr title="Graphics Interchange Format">GIF</abbr> were very popular in the late 1990s and early 2000s but have become
+        less common on websites (except social media). See for example
+        <a href="https://11points.com/11-best-old-school-animated-gifs/">11 Best Old School Animated GIFs</a> (by Sam Greenspan, 2008, updated in 2018),
+        the archive at <a href="http://www.textfiles.com/underconstruction/">textfiles.com</a>,<!--see also https://www.vice.com/en/article/9akenz/this-guy-compiled-every-under-construction-gif-from-the-90s -->
+        and <a href="https://gifcities.org/">GifCities</a>.
+        <!--"The Art of the Subtle Animated GIF": https://www.designdpi.com/news/the-art-of-the-subtle-animated-gif/ -->
+      </p>
       <ul>
         <li>Animated logo:
           <a href="https://www.ethicalsystems.org/">Ethical Systems</a> (last accessed 24.01.2021).
@@ -1004,7 +1009,7 @@
           <a href="http://axl.cefan.ulaval.ca/index.html" hreflang="fr" lang="fr">L'aménagement linguistique dans le monde: page d'accueil</i>
         </li>
         <li><a href="http://www.maupassantiana.fr/Filmographie/Maupassant%20passeur%20d'images.htm" hreflang="fr" lang="fr">Maupassant, le passeur d’images</a>.
-          (Aninated GIF at the bottom; web page created with "Microsoft Word 11. Accessed on 12.04.2021.)
+          (Animated GIF at the bottom; web page created with "Microsoft Word 11. Accessed on 12.04.2021.)
         </li>
       </ul>
       <p>Flashes:</p>
@@ -1039,6 +1044,12 @@
         <li><a href="https://www.halleonardbooks.com/">Hal Leonard</a>:
           <q>If you're looking for Backbeat Books, Amadeus Press, Applause Theatre &amp; Cinema Books, or Limelight Editions, <a href="https://rowman.com/" target="_blank">click here</a>.</q>
         </li>
+      </ul>
+      <p>Invisible or barely visible tab focus:</p>
+      <ul>
+        <li><a href="http://www.worldofdante.org/">World of Dante</a>:
+        <code>dl</code> element (with <code>id="imap"</code>) that uses a background image; inside this list,
+        the <code>dt</code> element contains an absolute positioned <code>a</code> element with a background image.
       </ul>
       <p>Marquee:</p>
       <ul>
