Add Winter Verlag: contrast issues

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -941,6 +941,10 @@
           <span lang="de">Sprach- und Literaturwissenschaften</span> (orange): low contrast with the white text.
         </li>
         <li>
+          <a href="https://www.winter-verlag.de/en/programm/fachgebiete/" hreflang="de">Winter Verlag: Fachgebiete New Publications</a>:
+          see colour contrast on hover over certain links in the sidebar on the left: Indogermanistik, Orientalistik, Ethnologie, Musicology.
+        </li>
+        <li>
           <a href="https://totalanalysis.com/Covid19/TAIndex">Covid Data Transparency Index (<abbr>CDTI</abbr>)</a>,
           <i class="website">TotalAnalysis</i>.
           <br />The main table has a black background with columns that use various colours for the text. The contrasts look weak but pass the contrast test:
