Add: Krasimir: Stop autoplaying your Gifs; Tarnoff: Animation Switch

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1890,6 +1890,16 @@
           <a href="https://letsbuildui.dev/articles/reducing-motion-in-animations">Reducing Motion in Animations</a>,
           <i class="website">Let's Build <abbr>UI</abbr></i>, 20.12.2020.
         </li>
+        <li>Krasimir:
+          <a href="https://krasimirtsonev.com/blog/article/stop-autoplaying-your-gifs-stop-play-control">Stop autoplaying your Gifs</a>,
+          <i class="blog">Blog of Krasimir Tsonev</i>, 19.06.2014.
+          <br />See also the associated
+          <a href="http://krasimir.github.io/gifffer/">Gifffer Example</a>.
+        </li>
+        <li>Tarnoff, Nat:
+          <a href="https://codepen.io/nattarnoff/pen/JoMxpK">Animation Switch</a>,
+          <i class="website">CodePen</i> (accessed on 06.05.2021).
+        </li>
         <li>Hart, Callum:
           <a href="https://www.callumhart.com/blog/using-animation-to-design-better-user-experiences/">Using Animation to Enhance <abbr>UX</abbr></a>,
           <i class="blog">Callum Hart's blog</i>, 12.07.2016.
