Move examples of failures and feature to a new page

--- a/404.html
+++ b/404.html
@@ -90,6 +90,7 @@ permalink: /404.html
             <li><a href="body-of-knowledge-certificates.html">Accessibility Body of Knowledge and Certificates</a></li>
             <li><a href="terminology.html">Terminology</a></li>
             <li><a href="social-legal.html">Social and Legal Aspects</a></li>
+            <li><a href="features-failures-examples.html">Failure Examples</a></li>
             <!--@@TODO add "other topics"-->
           </ul>
         </li>
