--- a/index.xhtml
+++ b/index.xhtml
@@ -36,6 +36,7 @@
       <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
       <li><a href="elearning.html">Accessibility in e-Learning</a></li>
       <li><a href="contentmanagement.html">Content Management Systems (<abbr>CMS</abbr>)</a></li>
+      <li><a href="features-failures-examples.html">Failure Examples</a></li>
     </ul>
   </div>
 
