Fix validation issue

--- a/features-failures-examples.html
+++ b/features-failures-examples.html
@@ -63,7 +63,7 @@
         </li>
         <li><a href="https://www.german-conferences.de/kiwi/de/2402" hreflang="de" lang="de"><abbr>DAAD</abbr>-Kompetenzzentrum Internationale Wissenschaftskooperation (<abbr>KIWI</abbr>):
           Wissenschaftskooperationen zwischen „anything goes“ und „roten Linien“ – Zusammenarbeit unter komplexen Rahmenbedingungen gestalten</a>:
-          low contrasst due to light green text on a white background (<span style="color: #afc800; background-color: white;">sample text; contrast ratio: 1.89:1<span>).
+          low contrasst due to light green text on a white background (<span style="color: #afc800; background-color: white;">sample text; contrast ratio: 1.89:1</span>).
           Also no meaningful <code>title</code> element (<span lang="de">Programm</span>)
           and first heading represented by an image containing text with just the alt text &ldquo;Header&rdquo;. (Accessed on 11.05.2021.)
          </li>
