Add: h3: Page Title

--- a/features-failures-examples.html
+++ b/features-failures-examples.html
@@ -161,6 +161,7 @@
           Other accessibility issues on this page include empty heading elements, and images with the the attribute <code>alt="Default Alt Tag for this page"</code>.
         </li>
       </ul>
+
       <h3>Invisible or Barely Visible Keyboard Focus</h3>
       <ul>
         <li>
@@ -172,6 +173,7 @@
           the <code>dt</code> element contains an absolute positioned <code>a</code> element with a background image.
         </li>
       </ul>
+
       <h3>Live Updates</h3>
       <ul>
         <li>
@@ -179,10 +181,26 @@
           <i class="Markets Insider"></i>, 12.01.2021. See the live updates on futures, gold and oil at the top of the page.
         </li>
       </ul>
+
       <h3>Linktext That Is Not Meaningful</h3>
       <ul>
         <li><a href="https://www.halleonardbooks.com/">Hal Leonard</a>:
           <q>If you're looking for Backbeat Books, Amadeus Press, Applause Theatre &amp; Cinema Books, or Limelight Editions, <a href="https://rowman.com/" target="_blank">click here</a>.</q>
+        </li>
+      </ul>
+
+      <h3>Page Title</h3>
+      <p>Examples where the <code>title</code> element is not meaningful, missing or has other issues.<p>
+      <ul>
+        <li>Stelter, Brian; Darcy, Oliver:
+          <a href="https://view.newsletters.cnn.com/messages/16104260848347cd1650aacd3/raw">"Reliable Sources" / "Tell us what happened"</a>,
+          <i class="website"><abbr>CNN</abbr> Business</i>, January 2021.<br />
+          Empty <code>title</code> element: <code>&lt;title&gt;&lt;/title&gt;</code>. (Accessed on 12.01.2021, 11.05.2021.)
+        </li>
+        <li><del datetime="2021-05-11">
+          <a href="https://dev.to/rly">O RLY Parody Book Generator</a>,
+          <i class="website">DEV Community</i>.
+          <br />Two head elements, each containing a title element. (Accessed on 02.12.2020; issue no longer present on 11.05.2021.)</del>
         </li>
       </ul>
 
@@ -272,10 +290,7 @@
         * with old-fashioned pop-up menu: http://www.alanwood.net/unicode/cjk_unified_ideographs.html
         * noscript element (visible with NoScript enabled in the browser): http://www.apress.com/us/book/9781484219157 & https://communities.ca.com/ideas/235735203 etc etc.
         * Pressing pagedown button takes you to the next article instead of scrolling down (02.12.2020): https://www.euronews.com/2020/12/01/us-attorney-general-william-barr-says-no-widespread-election-fraud-disputing-trump
-        * two head elements, each containing a title element (02.12.2020): https://dev.to/rly
         * on hover, page pans, so button moves away from mouse: https://www.payot-rivages.fr/
-        * empty title element:
-          - (12.01.2021: "Reliable Sources" / "Tell us what happened") https://view.newsletters.cnn.com/messages/16104260848347cd1650aacd3/raw
         * h1 element: "T H E   C A N T E R B U R Y   T A L E S" : http://www.librarius.com/index.html
         * NCERT / National Council of Educational Research & Training: visible skip links, "Screen Reader Access", contrast widgets: https://ncert.nic.in/index.php?ln=
             Screen Reader Access: https://ncert.nic.in/screen-reader.php
@@ -298,11 +313,11 @@
             <li>
               <a href="https://www.gmb.org.uk/accessibility-tools">Accessibility tools (<abbr>GMB</abbr> Union)</a> (resize-font icon to the left of the social media links).
             </li>
-            <li>
-              <a href="https://accessibe.com/product">accessiBe</a>.
-              Commercial product. Note that its claim of full compliance is contradicted by the fact that making a website accessible is not a process that can be fully automated.
-            </li>
           </ul>
+        </li>
+        <li>
+          <a href="https://accessibe.com/product">accessiBe</a>.
+          Commercial product. Note that its claim of full compliance is contradicted by the fact that making a website accessible is not a process that can be fully automated.
         </li>
       </ul>
       <p>Widgets for contrast, background colour, font size or a combination of these:</p>
