--- a/features-failures-examples.html
+++ b/features-failures-examples.html
@@ -189,6 +189,16 @@
         </li>
       </ul>
 
+      <h3>Forms</h3>
+      <ul>
+        <li>
+          <a href="https://dev.to/rly">O RLY Parody Book Generator</a>,
+          <i class="website">DEV Community</i>.
+          <br /><code>label</code> elements positioned above <code>input</code> elements without an explicit connection (no <code>for</code> attributes on the labels).
+          (Accessed on 11.05.2021.)
+        </li>
+      </ul>
+
       <h3>Page Title</h3>
       <p>Examples where the <code>title</code> element is not meaningful, missing or has other issues.<p>
       <ul>
