--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -40,6 +40,9 @@
       <li><a href="tts.html"><abbr title="Text-to-speech software">TTS</abbr></a></li>
       <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
       <li><a href="terminology.html">Terminology</a></li>
+      <li><a href="social-legal.html">Social and Legal Aspects</a></li>
+      <li><a href="body-of-knowledge-certificates.html"><abbr title="Body of Knowledge">BOK</abbr> and Certificates</a></li>
+      <li><a href="features-failures-examples.html">Failure Examples</a></li>
       <li><a href="miscellaneous-links.html">Miscellaneous Links</a></li>
     </ul>
   </nav>
