Add more examples, e.g. ReadSpeaker

--- a/features-failures-examples.html
+++ b/features-failures-examples.html
@@ -107,27 +107,36 @@
       <h3>Nested Tables</h3>
       <ul>
         <li>
-          <a href="https://www.itu.int/rec/T-REC-V.18/en">V.18 : Operational and interworking requirements for DCEs operating in the text telephone mode</a>,
+          <a href="https://www.itu.int/rec/T-REC-V.18/en">V.18 : Operational and interworking requirements for <abbr>DCEs</abbr> operating in the text telephone mode</a>,
           <i class="website">International Telecommunications Union (<abbr>ITU</abbr>)</i> (accessed on 17.03.2021).
         </li>
         <li>
-          <a href="https://www.itu.int/rec/T-REC-G.722/e">G.722 : 7 kHz audio-coding within 64 kbit/s</a>,
+          <a href="https://www.itu.int/rec/T-REC-G.722/e">G.722 : 7 <abbr>kHz</abbr> audio-coding within 64 kbit/s</a>,
           <i class="website">International Telecommunications Union (<abbr>ITU</abbr>)</i> (accessed on 17.03.2021).
         </li>
       </ul>
 
       <h3>Animations and Animated Background</h3>
-      <p>These animations constitute an issue because they run longer than a few seconds and cannot be paused or hidden by the users.</p>
+      <p>These animations constitute an issue because they run longer than a few seconds and cannot be paused or hidden by users.</p>
       <ul>
         <li>
           <a href="https://myprobe.de/">Myprobe</a>: animated background using an <code>iframe</code> that loads a page containing a <code>canvas</code> element.
+          (Last accessed on 11.05.2021.)
         </li>
         <li>
-          <a href="https://psychoslinux.gitlab.io/">psychoslinux.gitlab.io</a> (background video; last accessed 24.01.2021).
+          <a href="https://psychoslinux.gitlab.io/">psychoslinux.gitlab.io</a>: background video. (24.01.2021; last accessed on 11.05.2021.)
         </li>
-        <li>
+        <li><del datetime="2021-01-24">
           <a href="https://websemantics.uk/tools/font-size-conversion-pixel-point-em-rem-percent/">Font size conversion px-pt-em-rem-percent</a>
-          <i class="website">webSemantics</i> (snowflakes, on 10.12.2020; not when accessed on 24.01.2021).
+          <i class="website">webSemantics</i></del> (snowflakes, on 10.12.2020; not when accessed on 24.01.2021).
+        </li>
+        <li><a href="https://www.klostermann.de/" hreflang="de" lang="de">Verlag Vittorio Klostermann</a>:
+          carousel that cannot be paused or hidden. (Accessed on 11.05.2021.)
+        </li>
+        <li><a href="https://www.bundesfachstelle-barrierefreiheit.de/DE/" hreflang="de" lang="de">Bundesfachstelle Barrierefreiheit</a>:
+          carousel that can be paused and therefore meets
+          <a href="https://www.w3.org/TR/WCAG21/#pause-stop-hide">Success Criterion 2.2.2 Pause, Stop, Hide</a>.
+          (Accessed on 11.05.2021.)
         </li>
       </ul>
       <p>Animated <abbr title="Graphics Interchange Format">GIF</abbr> were very popular in the late 1990s and early 2000s but have become
@@ -323,6 +332,12 @@
             <li>
               <a href="https://www.gmb.org.uk/accessibility-tools">Accessibility tools (<abbr>GMB</abbr> Union)</a> (resize-font icon to the left of the social media links).
             </li>
+          </ul>
+        </li>
+        <li>ReadSpeaker:
+          <ul>
+            <li><a href="https://www.dbsv.org/aktuell/digital-accessibility-summit-am-20-mai-mit-livestream.html" hreflang="de" lang="de">Digital Accessibility Summit am 20. Mai mit Livestream</a>,
+            <i class="website"><abbr>DBSV</abbr></i>, 06.05.2021. (Accessed on 11.05.2021.)
           </ul>
         </li>
         <li>
