Add: list of overlay tools

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -2207,6 +2207,94 @@
           <!--Referrer: https://twitter.com/A11yNews/status/1391754937743335424 -->
         </li>
       </ul>
+      <p>Below is a list of overlay tools (with some of their overblown and misleading claims):<p>
+      <!--Mostly found using the following search: https://duckduckgo.com/?t=ffab&q=accessibility+solution+%22line+of+javascript%22+compliance&ia=web -->
+      <ul>
+        <li>
+          <a href="https://www.facil-iti.fr/" hreflang="fr" lang="fr">FACIL’iti</a> (France):
+          <q lang="fr">FACIL’iti est une solution d’accessibilité numérique innovante qui adapte l’affichage d’un site Web en fonction des besoins de confort visuel, moteur, cognitif, et/ou temporaire de l’internaute.</q>.
+        </li>
+        <li><a href="https://accessibe.com/">accessiBe</a> (Israel):
+          <q>The #1 Automated Web Accessibility Solution for <abbr>ADA</abbr> &amp; <abbr>WCAG</abbr> Compliance</q>;
+          <q>A single line of code for 24/7 automated compliance</q>.
+          (There is even a <a href="https://en.wikipedia.org/wiki/AccessiBe">Wikipedia article about accessiBe</a>.)
+          <!--Used, for example, by Sincro: https://www.sincrodigital.com/Websites/Accessibility
+            Blissbranding Agency: https://www.blissbranding.com/web-accessibility/
+          -->
+        </li>
+        <li>
+          <a href="https://www.audioeye.com/website-accessibility">AudioEye</a> (Tucson, Arizona, <abbr>USA</abbr>):
+          <q>#1 in Web Accessibility</q><br />
+          <q>When it comes to understanding web accessibility compliance, AudioEye is here to help. AudioEye’s website accessibility software delivers superior accessibility and proven legal protection.</q><br />
+          <q>Once our tool is installed, AudioEye will be able to detect and fix over 400 accessibility errors immediately.</q>
+          (Accessed on 12.05.2021.)
+        </li>
+        <li>
+          <a href="https://oswaldlabs.com/platform/agastya/">Agastya by Oswald Labs</a> (New Delhi, India):
+          <q>By adding just one line of JavaScript code, you can make your website accessible to a much wider audience. You can customize the widget, view usage analytics, install apps, and more.</q>
+          (Accessed on 12.05.2021.)
+        </li>
+        <li>
+          <a href="https://userway.org/">UserWay</a> (Floor Wilmington, <abbr>DE</abbr>, <abbr>USA</abbr>):
+          <q>The World's Leading Automated Website Accessibility Solution for ADA &amp; WCAG Compliance</q><br />
+          <q>Requires only a single line of JavaScript</q>. (Accessed on 12.05.2021.)
+          <br />
+          <q>UserWay's plugin will instantly strengthen any weak spots that might cause issues.
+          We are proud to say that tens of millions of pages are more accessible today thanks to UserWay.</q>
+          <!--accessed 22.10.2018, 13.02.2019; tool is mentioned at https://www.audiologyandhearing.com/accessibility/-->
+        </li>
+        <li>
+          <a href="https://www.equalweb.com/">EqualWeb</a> (Kfar Yona, Israel):
+          <q>Make your website accessible in 1 easy step – insert one-line-of-code and we will do the rest!</q> (Accessed on 12.05.2021.)
+        </li>
+        <li>
+          <a href="https://maxaccess.io/">Max Access – AI-Powered Web Accessibility for WCAG and Section 508 Compliance</a> (Eugene, Oregon, <abbr>USA</abbr>):
+          <q>INSTALL JUST 1 SINGLE LINE OF CODE<br />Max Access instantly scans, analyzes, and updates your website. Then it re-scans for any site updates or new content every 24 hours!</q>
+          (Accessed on 12.05.2021.)
+        </li>
+        <li>
+          <a href="https://www.howlingaccess.ai/">Howling Access <abbr>AI</abbr></a> (Tampa, Florida, <abbr>USA</abbr>):
+          <q>Fully Automated Web Accessibility Solution for <abbr>ADA</abbr> &amp; <abbr>WCAG</abbr> Compliance</q><br />
+          <q>Installing Howling Access <abbr>AI</abbr> is as simple as adding a single line of JavaScript code to your website. You can also add it through Google Tag Manager, or use one of our CMS extensions like WordPress, Joomla, BigCommerce, Drupal, etc.</q>
+          (Accessed on 12.05.2021. Notice the low contrast of the white text on the yellow background and the yellow text on the white backgroun.)
+        </li>
+        <li>
+          <a href="https://enablemysite.com/">Enable / EnableMyWebsite.com</a> (Royersford, <abbr>PA</abbr>, <abbr>USA</abbr>?):
+          <q>AI-Powered Web Accessibility. Automatic. Simple. Affordable.</q><br />
+          <q>Installing Enable Web Accessibility is extremely quick and simple. All you need to do is implement a single line of JavaScript code into your website. It's as simple as installing Google Analytics or Facebook Pixel!
+          Additionally, you can even implement it using Google Tag Manager or our built-in <abbr>CMS</abbr> plugins!</q>
+          <br />This is actually powered by AccessiBe; see <a href="https://enablemysite.com/terms-and-conditions/">Enable's Terms and Conditions</a>. (Accessed on 12.05.2021.)
+        </li>
+        <li>
+          <a href="https://kiuloper.com/ai-powered-web-accessibility-solution/">Kiuloper</a> (Canada):
+          <q>Installing <abbr>AI</abbr> solution is as simple as adding a single line of JavaScript code to your website. You can also add it through Google Tag Manager, or use one of our <abbr>CMS</abbr> extensions like WordPress, Joomla, BigCommerce, Drupal, etc.</q>
+          (Accessed on 12.05.2021.)
+        </li>
+        <li>
+          <a href="https://direction.com/ada-accessibility/">Direction</a> (McLean, Virginia, <abbr>USA</abbr>):
+          <q>The Website Accessibility Solution with Full <abbr>ADA</abbr> Compliance</q><br />
+          <q>We add a single line of JavaScript code to the footer of your website. Don’t worry, we can also give you that code if you’d like to install it yourself.</q>
+          (Accessed on 12.05.2021.)
+        </li>
+        <li>
+          <a href="https://www.mavagency.com/web-accessibility/">Maverick Media</a> (Easton, <abbr>PA</abbr>, <abbr>USA</abbr>):
+          <q>THE #1 FULLY AUTOMATED WEBSITE ACCESSIBILITY SOLUTION FOR <abbr>ADA</abbr> &amp; <abbr>WCAG</abbr> COMPLIANCE</q><br />
+          <q>We will create a single line of JavaScript code and install it on your website platform of choice.</q>
+          (This is an AccessiBe partner. Accessed on 12.05.2021.)
+        </li>
+        <li>
+          <a href="https://beeseensolutions.com/ada-compliance/">BeeSeen Solutions</a> (New York, <abbr>USA</abbr>):
+          <q>Accelerate your business with BeeSeen Solutions website accessibility solutions without re-structuring your website’s existing code and secure a comprehensive legal and regulatory compliance framework
+          covering <abbr>ADA</abbr>, Section 508, <abbr>WCAG</abbr> 2.1 AA, and much more.</q><br />
+          <q>BeeSeen Solutions Accessibility Widget is compatible with all leading <abbr>CMS</abbr> platforms along with <abbr>HTML</abbr>/<abbr>CSS</abbr>/<abbr>JS</abbr> sites. This widget can easily spot any weak areas that might be causing issues, obstacles, or accessibility violations.</q>
+          (Accessed on 12.05.2021.)
+        </li>
+        <li>
+          <a href="https://getadaaccessibility.com/">Get <abbr>ADA</abbr> Accessibility</a> (<abbr>USA</abbr>?):
+          <q>Get <abbr>ADA</abbr> Accessibility supports ALL cross-platform, using our cutting edge technology based on unique <abbr>AI</abbr> algorithms. We can help you make your website and all your digital content accessible without modifying your code.
+          <br />Just insert one-line-of-code and we will do the rest!</q>
+        </li>
+      </ul>
     </section>
 
     <section>
