Add h4 elements for overlay tools

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -2064,6 +2064,7 @@
       </ul>
 
       <h3 id="overlaytools">Overlay Tools</h3>
+      <h4>Overlay Tools: Articles</h4>
       <p>Overlay products are sold as tools that magically solve a website's accessibility issues.</p>
       <ul>
         <li>
@@ -2207,6 +2208,7 @@
           <!--Referrer: https://twitter.com/A11yNews/status/1391754937743335424 -->
         </li>
       </ul>
+      <h4 id="overlaytools-list">Overlay Tools: List of Tools</h4>
       <p>Below is a list of overlay tools (with some of their overblown and misleading claims):<p>
       <!--Mostly found using the following search: https://duckduckgo.com/?t=ffab&q=accessibility+solution+%22line+of+javascript%22+compliance&ia=web -->
       <ul>
