Add: Atkinson Hyperlegible Font

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1657,6 +1657,10 @@
             See also: https://twitter.com/jakobo/status/1391649388703797250
           -->
         </li>
+        <li>
+          <a href="https://brailleinstitute.org/freefont">Atkinson Hyperlegible Font</a>,
+          <i class="website">Braille Institute of America</i>, 2021.
+        </li>
       </ul>
     </section>
 
@@ -2209,20 +2213,24 @@
         </li>
       </ul>
       <h4 id="overlaytools-list">Overlay Tools: List of Tools</h4>
-      <p>Below is a list of overlay tools (with some of their overblown and misleading claims):<p>
+      <p>Below is a list of overlay tools (with some of their overblown and misleading claims). Since making a website accessible is a process that cannot be automated,
+        the claims by these vendors are misleading.
+      <p>
       <!--Mostly found using the following search: https://duckduckgo.com/?t=ffab&q=accessibility+solution+%22line+of+javascript%22+compliance&ia=web -->
       <ul>
         <li>
           <a href="https://www.facil-iti.fr/" hreflang="fr" lang="fr">FACIL’iti</a> (France):
           <q lang="fr">FACIL’iti est une solution d’accessibilité numérique innovante qui adapte l’affichage d’un site Web en fonction des besoins de confort visuel, moteur, cognitif, et/ou temporaire de l’internaute.</q>.
+          (Accessed on 12.05.2021.)
         </li>
-        <li><a href="https://accessibe.com/">accessiBe</a> (Israel):
+        <li><a href="https://accessibe.com/product">accessiBe</a> (Israel):
           <q>The #1 Automated Web Accessibility Solution for <abbr>ADA</abbr> &amp; <abbr>WCAG</abbr> Compliance</q>;
           <q>A single line of code for 24/7 automated compliance</q>.
           (There is even a <a href="https://en.wikipedia.org/wiki/AccessiBe">Wikipedia article about accessiBe</a>.)
           <!--Used, for example, by Sincro: https://www.sincrodigital.com/Websites/Accessibility
             Blissbranding Agency: https://www.blissbranding.com/web-accessibility/
           -->
+          (Accessed on 12.05.2021.)
         </li>
         <li>
           <a href="https://www.audioeye.com/website-accessibility">AudioEye</a> (Tucson, Arizona, <abbr>USA</abbr>):
@@ -2250,7 +2258,7 @@
           <q>Make your website accessible in 1 easy step – insert one-line-of-code and we will do the rest!</q> (Accessed on 12.05.2021.)
         </li>
         <li>
-          <a href="https://maxaccess.io/">Max Access – AI-Powered Web Accessibility for WCAG and Section 508 Compliance</a> (Eugene, Oregon, <abbr>USA</abbr>):
+          <a href="https://maxaccess.io/">Max Access – <abbr>AI</abbr>-Powered Web Accessibility for <abbr>WCAG</abbr> and Section 508 Compliance</a> (Eugene, Oregon, <abbr>USA</abbr>):
           <q>INSTALL JUST 1 SINGLE LINE OF CODE<br />Max Access instantly scans, analyzes, and updates your website. Then it re-scans for any site updates or new content every 24 hours!</q>
           (Accessed on 12.05.2021.)
         </li>
@@ -2295,6 +2303,7 @@
           <a href="https://getadaaccessibility.com/">Get <abbr>ADA</abbr> Accessibility</a> (<abbr>USA</abbr>?):
           <q>Get <abbr>ADA</abbr> Accessibility supports ALL cross-platform, using our cutting edge technology based on unique <abbr>AI</abbr> algorithms. We can help you make your website and all your digital content accessible without modifying your code.
           <br />Just insert one-line-of-code and we will do the rest!</q>
+          (Accessed on 12.05.2021.)
         </li>
       </ul>
     </section>
