Add: Holdsworth: Accessibility testing as a screen reader user

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -2443,6 +2443,11 @@
           <i class="website">OpenConcept Stories</i> on Medium, 16.03.2020 (eight-minute read).
           <!--@@read and describe!-->
         </li>
+        <li>Holdsworth, Isabel:
+          <a href="https://www.tpgi.com/accessibility-testing-as-a-screen-reader-user/">Accessibility testing as a screen reader user</a>,
+          <i class="website">TPGi</i>, 09.05.2021.
+          <!--Referrer: Steve Faulkner: https://twitter.com/stevefaulkner/status/1391682353169420291 -->
+        </li>
       </ul>
     </section>
 
