Add: Tollwerk: ARIA-Live-Regionen

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -338,6 +338,10 @@
         on LinkedIn (18 August 2015).
         <!--@@install -->
       </li>
+      <li><span lang="de">
+        <a href="https://tollwerk.de/projekte/tipps-techniken-inklusiv-barrierefrei/aria-live-regionen" hreflang="de"><abbr>ARIA</abbr>-Live-Regionen</a>,
+        <i class="website">Tollwerk</i>,</span> last updated on 02.04.2021 (accessed on 09.04.2021).
+      </li>
       <li><abbr>INCOBS</abbr>:
         <a href="http://www.incobs.de/wai-aria-techniken.html"><abbr>WAI-ARIA</abbr> Techniken</a>.
       </li>
