--- a/social-legal.html
+++ b/social-legal.html
@@ -39,8 +39,10 @@
       <li><a href="assistivetechnology.html">Assistive Technology</a></li>
       <li><a href="tts.html"><abbr title="Text-to-speech software">TTS</abbr></a></li>
       <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
+      <li><a href="body-of-knowledge-certificates.html"><abbr title="Body of Knowledge">BOK</abbr> and Certificates</a></li>
       <li><a href="terminology.html">Terminology</a></li>
       <li class="active"><a aria-current="page" href="social-legal.html">Social and Legal Aspects</a></li>
+      <li><a href="features-failures-examples.html">Failure Examples</a></li>
       <li><a href="miscellaneous-links.html">Miscellaneous Links</a></li>
     </ul>
   </nav>
@@ -280,6 +282,16 @@
         <a href="https://barrierenbrechen.de/" hreflang="de">#Barrierefreiheitsrecht – Barrieren brechen</a>:
         <q>Ein Projekt der Sozialheld*innen</q></span> (accessed on 16.04.2021).
       </li>
+        <li><span lang="de">
+          <a href="https://www.mdr.de/nachrichten/sachsen/tag-der-barrierefreiheit-100.html" hreflang="de">Barrierefreiheit im Netz: Es gibt Nachholbedarf</a>,
+          <i class="website"><abbr>MDR</abbr></i>,</span> 05.05.2021.
+        </li>
+      <li><span lang="de">
+        <a href="https://www.dbsv.org/resolution/forderungen-zur-bundestagswahl-2021.html" hreflang="de">Forderungen des <abbr>DBSV</abbr> zur Bundestagswahl 2021</a>,
+        <i class="website">Deutscher Blinden- und Sehbehindertenverband (<abbr>DBSV</abbr>)</i>,</span> 07.05.2021.
+        <br />See also the press release
+        <a href="https://www.dbsv.org/aktuell/dbsv-verabschiedet-resolution-zur-bundestagswahl.html" hreflang="de" lang="de"><abbr>DBSV</abbr> verabschiedet Resolution zur Bundestagswahl</a>.
+      </li>
     </ul>
 
     <h3>Outside the European Union</h3>
@@ -383,6 +395,10 @@
       <li>
         <a href="https://info.usablenet.com/thank-you-2020-end-of-year-report-on-digital-accessibility-lawsuits">2020 End of year Report on Digital Accessibility Lawsuits</a>,
         <i class="website">UsableNet</i>.
+      </li>
+      <li>
+        <a href="https://www.essentialaccessibility.com/blog/web-accessibility-lawsuit-trends-for-2021">Web Accessibility Lawsuit Trends for 2021</a>,
+        <i class="blog">eSSENTIAL Accessibility blog</i>, 05.01.2021.
       </li>
     </ul>
 
@@ -619,7 +635,7 @@
     <section>
       <h2></h2>
       <ul>
-        <i>
+        <li>
           <a href=""></a>,
           <i class=""></i>,
         </li>
