Add La baraque aux arts

--- a/features-failures-examples.html
+++ b/features-failures-examples.html
@@ -156,6 +156,14 @@
         <li><a href="http://www.maupassantiana.fr/Filmographie/Maupassant%20passeur%20d'images.htm" hreflang="fr" lang="fr">Maupassant, le passeur d’images</a>.
           (Animated GIF at the bottom; web page created with "Microsoft Word 11. Accessed on 12.04.2021.)
         </li>
+        <li>Slaski, Dan:
+          <a href="https://www.solidsmack.com/engineering/things-to-stop-saying-i-know-enough-to-be-dangerous/">Things to Stop Saying: “I Know Enough to Be Dangerous”</a>,
+          <i class="website">SolidSmack</i>, 24.06.2020.
+          (Several animated GIFs.)
+        </li>
+        <li><a href="https://www.labaraqueauxarts.com/" hreflang="fr" lang="fr">La baraque aux arts</a>:
+          intro animation that lasts around 12 seconds.
+        </li>
       </ul>
       <h3>Flashes or Flashing Content</h3>
       <ul>
@@ -318,7 +326,7 @@
     </section>
 
     <section>
-      <h2>Pages Featuring Various Accessibility Features or Tools</h2>
+      <h2>Pages With Various Accessibility Features or Tools</h2>
       <p>Externally developed toolbars or overlays:</p>
       <ul>
         <li>
@@ -340,10 +348,6 @@
             <i class="website"><abbr>DBSV</abbr></i>, 06.05.2021. (Accessed on 11.05.2021.)
           </ul>
         </li>
-        <li>
-          <a href="https://accessibe.com/product">accessiBe</a>.
-          Commercial product. Note that its claim of full compliance is contradicted by the fact that making a website accessible is not a process that can be fully automated.
-        </li>
       </ul>
       <p>Widgets for contrast, background colour, font size or a combination of these:</p>
       <ul>
@@ -355,15 +359,17 @@
         <li>Setting a different background colour (for dyslexia or Irlen synrome):
           <ul>
             <li>
-              <a href="https://irlen.com/">Irlen Institute</a>: 11 different background colours,
+              <a href="https://irlen.com/">Irlen Institute (<abbr>USA</abbr>)</a>: 11 different background colours,
               but the chosen background colour is not remembered when navigating to another page.
+              (The site has not accessibility statement. Accessed on 14.05.2021.)
             </li>
             <li>
-              <a href="https://www.irlendyslexia.com/">Irlen Diagnostic Clinic Newcastle</a>: 12 different background colours.
+              <a href="https://www.irlendyslexia.com/">Irlen Diagnostic Clinic Newcastle (Australia)</a>: 12 different background colours.
+              (The site has not accessibility statement. Accessed on 14.05.2021.)
             </li>
             <li>
               <a href="https://www.dyslexiadaily.com/">Dyslexia Dailey</a>: 9 different background colours.
-              (The site also has Recite.)
+              (The site also uses Recite. The site has not accessibility statement. Accessed on 14.05.2021.)
             </li>
           </ul>
         </li>
